Support 16599, Evaluate WCAG compliance of seqdb-ui, Fixed react table column/rows and all other text fields contrast ratio low issue

--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -1,4 +1,9 @@
 /* Add padding to the body so content is not hidden. */
 body {
   padding-top: 80px;
+  background-color: #ffffff;
+  color: #666666;
+}
+a {
+  color: #1064b4;
 }
